# openai-api-adapter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  claude-building-with-extended-thinking.md  compose.prod.yaml  compose.yaml  pyproject.toml  test_aiberm.sh
app/: config.py  main.py
app/models/: __init__.py  common.py  openai.py
app/providers/: __init__.py  base.py  claude.py  registry.py
app/routes/: chat.py  models.py
app/utils/: converter.py  logger.py  routing.py  streaming.py
openai_api_adapter/: config.py  exceptions.py  main.py
openai_api_adapter/models/: __init__.py  common.py  openai.py
openai_api_adapter/providers/: __init__.py  aiberm.py  base.py  claude.py  openai_base.py  registry.py
openai_api_adapter/routes/: chat.py  models.py
openai_api_adapter/utils/: converter.py  logger.py  routing.py  streaming.py  thinking_cache.py
