[project]
name = "openai-api-adapter"
version = "0.1.0"
description = "OpenAI-compatible API adapter for multiple AI providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "fastapi>=0.128.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
openai-api-adapter = "app.main:main"
