[project]
name = "openai-api-adapter"
version = "0.1.0"
description = "OpenAI-compatible API adapter for multiple AI providers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "cachetools>=5.5.0",
    "fastapi>=0.128.0",
    "openai>=1.50.0",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
openai-api-adapter = "openai_api_adapter.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
